fix: filter accessibility

--- a/main/page_dashboard/templates/dashboard_manager.html
+++ b/main/page_dashboard/templates/dashboard_manager.html
@@ -62,7 +62,7 @@
           <div class="search-filter-wrapper mb-2">
             <input type="text" id="user-search" class="form-control" placeholder="SEARCH USERS...">
             <select id="role-filter" class="form-select filter-dropdown">
-              <option value="0">ALL ROLES</option>
+              <option value="0">ALL ROLES&nbsp;&nbsp;</option>
               <option value="1">USERS</option>
               <option value="2">EXPERTS</option>
             </select>
