fix: modal disappearing on invalid bid

--- a/main/page_item/templates/item.html
+++ b/main/page_item/templates/item.html
@@ -230,7 +230,7 @@
                   </div>
                 </div>
                 <div class="d-grid gap-2">
-                  <button type="submit btn-close" class="btn btn-primary btn-lg" data-bs-dismiss="modal">Submit
+                  <button type="submit btn-close" class="btn btn-primary btn-lg">Submit
                     Bid</button>
                 </div>
               </form>
