style: minor formatting changes

--- a/main/page_addons/templates/faqs.html
+++ b/main/page_addons/templates/faqs.html
@@ -47,8 +47,6 @@
                   <ol>
                     <li>Click the "Register" button in the top right corner of any page</li>
                     <li>Fill out the registration form with your details</li>
-                    <li>You can register using your email address or with your Google account</li>
-                    <li>Verify your email address if prompted</li>
                     <li>You're ready to start bidding or selling!</li>
                   </ol>
                 </div>
@@ -173,7 +171,7 @@
                   <p>Vintage Vault charges a base platform fee on successful sales, calculated as a percentage of the
                     final selling price. Currently, our fee structure is:</p>
                   <ul>
-                    <li>Base platform fee: Varies (check current rate in your Create Auction page)</li>
+                    <li>Base platform fee: Varies (check current rate on the Create Auction page)</li>
                     <li>Additional fee for authenticated items</li>
                     <li>No listing fees - you only pay when your item sells</li>
                   </ul>
@@ -259,7 +257,6 @@
                   <p>We accept the following payment methods:</p>
                   <ul>
                     <li>Credit and debit cards (Visa, MasterCard, American Express)</li>
-                    <li>Klarna</li>
                     <li>Revolut</li>
                   </ul>
                   <p>All payments are processed securely through our payment providers.</p>
