--- a/main/page_dashboard/templates/dashboard_manager.html
+++ b/main/page_dashboard/templates/dashboard_manager.html
@@ -211,7 +211,7 @@
                           </option>
                           {% endfor %}
                         </select>
-                        <span class="expertise-text badge p-3" title="Expertise"></span>
+                        <span class="expertise-text badge p-3 mt-2" title="Expertise"></span>
                       </div>
                       <div
                         class="d-flex align-items-center justify-content-between text-center expert-assign-container">
