--- a/main/static/css/manager-styles.css
+++ b/main/static/css/manager-styles.css
@@ -26,6 +26,7 @@
     font-size: 1rem;
     border: none;
     border-right: 1.5px solid var(--primary-color);
+    border-radius: 0;
     width: 100%;
 }
   
