--- a/main/page_create/templates/create.html
+++ b/main/page_create/templates/create.html
@@ -71,9 +71,9 @@
     </div>
     <!--Images Upload-->
     <div class="form-group">
-      <label for="upload-image" class="form-label">Item Images</label>
+      <label for="upload-image" class="form-label">Item Images*</label>
       {{ form.images(class_="form-control", id_="upload-images", accept="image/*") }}
-      <small class="form-text text-muted">Accepted formats: JPG, JPEG, PNG. Max size: 1MB. Max 5 images.</small>
+      <small class="form-text text-muted">Accepted formats: JPG, JPEG, PNG. Max size: 1MB. Upload between 1 and 5 images.</small>
 
       <!-- List of image file names -->
       <ul id="image-list" class="list-unstyled"></ul>
