--- a/main/page_auth/templates/update_user.html
+++ b/main/page_auth/templates/update_user.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Update Details{% endblock %}
 
 {% block content %}
 
