--- a/main/page_item/templates/item.html
+++ b/main/page_item/templates/item.html
@@ -284,7 +284,7 @@
         </p>
         {% if not current_user.is_authenticated %}
         <a class="alert alert-warning mt-2 text-center authentication-alert"
-          href="{{ url_for('auth_page.login') }}">Login to bid</a>
+          href="{{ url_for('auth_page.login') + '?next=item%2F' + item.url }}">Login to bid</a>
         {% endif %}
         {% endif %}
         {% if item.highest_bid() and item.highest_bid().bidder_id == current_user.id and not show_payment %}
@@ -300,8 +300,7 @@
         {% endif %}
         {% if is_allowed %}
         <a class="alert alert-info mt-2 text-center authentication-alert"
-          href="{{ url_for('authenticate_item_page.index', url=item.authentication_requests[0].url) }}">Click to view
-          authentication request</a>
+          href="{{ url_for('authenticate_item_page.index', url=item.authentication_requests[0].url) }}">Click to view authentication request</a>
         {% endif %}
       </div>
     </div>
