--- a/main/static/css/styles.css
+++ b/main/static/css/styles.css
@@ -341,6 +341,10 @@ h1, h2, h3, h4, h5 {
   width: fit-content;
 }
 
+.black-click:active {
+  color: var(--accent-color);
+}
+
 /* Animations & Effects */
 .reveal {
   position: relative;
@@ -654,6 +658,9 @@ h1, h2, h3, h4, h5 {
   
   .navbar-collapse .nav-item {
     margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
   }
   
   .navbar-collapse .ms-auto {
@@ -666,17 +673,16 @@ h1, h2, h3, h4, h5 {
   .navbar-collapse .nav-item .btn,
   .navbar-collapse #notif-button,
   .navbar-collapse .dropdown-toggle {
-    display: flex;
     align-items: center;
-    width: 100% !important;
     height: 42px;
     padding: 0 15px !important;
     margin: 5px 0;
-    text-align: left;
-    justify-content: flex-start;
+    text-align: center;
+    justify-content: center;
     font-family: var(--font-mono);
     font-weight: 700;
     text-transform: uppercase;
+    width: auto !important;
   }
   
   /* Show word NOTIFICATIONS on smaller screens */
@@ -694,20 +700,22 @@ h1, h2, h3, h4, h5 {
   }
   
   .navbar-collapse .dropdown-menu {
-    width: 100% !important;
-    left: 0 !important;
-    right: 0 !important;
+    width: fit-content !important;
+    max-width: 80% !important;
     margin: 0 !important;
-    position: relative !important;
+    position: absolute !important;
     border-radius: 0 !important;
-    max-width: 100% !important;
     box-shadow: none !important;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
   }
 
   .navbar-collapse .dropdown-menu .notification-item {
     width: 100% !important;
     padding: 0.8rem !important;
     text-align: left !important;
+    white-space: normal;
   }
   
   /* Search and filter section */
