--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -6,12 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% block title %}{% endblock %}</title>
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/favicon/favicon-96x96.png') }}"
-    sizes="96x96" />
+  <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/favicon/favicon-96x96.png') }}" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='images/favicon/favicon.svg') }}" />
   <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon/favicon.ico') }}" />
-  <link rel="apple-touch-icon" sizes="180x180"
-    href="{{ url_for('static', filename='images/favicon/apple-touch-icon.png') }}" />
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='images/favicon/apple-touch-icon.png') }}" />
   <meta name="apple-mobile-web-app-title" content="Vault" />
   <link rel="manifest" href="{{ url_for('static', filename='images/favicon/site.webmanifest') }}" />
   <!-- Stop highlighting phone numbers on iOS -->
@@ -106,7 +104,7 @@
               {% endif %}
             </button>
             <ul class="dropdown-menu dropdown-menu-end notification-dropdown"
-              style="width: 300px; max-height: 400px; overflow-y: auto;">
+              style="min-width: 300px;">
               <div class="notification-header d-flex justify-content-between align-items-center p-2">
                 <h6 class="m-0">Notifications</h6>
                 {% if current_user.notifications %}
@@ -172,13 +170,12 @@
               <i class="fas fa-user-circle me-1"></i> {{ current_user.username }}
             </button>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
-              <li><a class="dropdown-item notification-item" href="{{ url_for('auth_page.update_user') }}">UPDATE
-                  PROFILE</a></li>
+              <li><a class="dropdown-item notification-item black-click" href="{{ url_for('auth_page.update_user') }}">UPDATE PROFILE</a></li>
               {% if current_user.role == 2 %}
-              <li><a class="dropdown-item notification-item"
+              <li><a class="dropdown-item notification-item black-click"
                   href="{{ url_for('expert_page.update_availability') }}">UPDATE AVAILABILITY</a></li>
               {% endif %}
-              <li><a class="dropdown-item notification-item" href="{{ url_for('auth_page.logout') }}">LOGOUT</a></li>
+              <li><a class="dropdown-item notification-item black-click" href="{{ url_for('auth_page.logout') }}">LOGOUT</a></li>
             </ul>
           </div>
         </div>
@@ -239,7 +236,7 @@
             <li class="mb-2"><a href="{{ url_for('addons_page.privacy') }}" class="text-white text-decoration-none"><i
                   class="bi bi-shield-lock-fill me-2 text-accent"></i> Privacy Policy</a></li>
             <li class="mb-2"><a href="{{ url_for('addons_page.faqs') }}" class="text-white text-decoration-none"><i
-                  class="bi bi-question-circle-fill me-2 text-accent"></i> FAQ</a></li>
+                  class="bi bi-question-circle-fill me-2 text-accent"></i> FAQs</a></li>
           </ul>
         </div>
 
